--- a/portfolio-apprentissage.html
+++ b/portfolio-apprentissage.html
@@ -9,8 +9,8 @@
 </head>
 <header>
     <a href="index.html" class="header">
-        <div style="display: flex; align-items: center">
-            <div class="carre"></div>
+        <div class="d-flex align-items-center">
+            <div class="size-16x16 gradient-bg-right"></div>
             <h1>Cyprien Bons</h1>
         </div>
         <div>/ Étudiant en Informatique</div>
@@ -34,35 +34,35 @@
     </nav>
     <script src="js/script.js"></script>
 </header>
-<body style="margin: 0;">
+<body class="m-0">
 <div class="button-back-apprentissage">
-    <a href="cv.html" class="bonton3" style="width: 250px; font-size: 14px">
-        <p style="margin: 0;">Revenir en arrière</p>
+    <a href="cv.html" class="button button-primary button-size-md" style="width: 250px; font-size: 14px"> <!-- Garde style pour width/font-size spécifique -->
+        <p class="m-0">Revenir en arrière</p>
     </a>
 </div>
 <div class="section1-apprentissage">
     <div>
-        <div style="display: flex; align-items: center; justify-content: center">
-            <div class="carre1"></div>
-            <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>Apprentissage
+        <div class="d-flex align-items-center justify-content-center">
+            <div class="size-20x20 gradient-bg-right"></div>
+            <p class="text-page-title"><strong>Apprentissage
                 Critique</strong></p>
         </div>
         <div class="section">
             <div class="section2-apprentissage">
-                <div style="display: flex">
-                    <div class="carre3"></div>
-                    <div style="padding: 0 20px">
+                <div class="d-flex">
+                    <div class="size-10x50 gradient-bg-bottom"></div>
+                    <div class="px-20">
                         <h3>Réaliser des applications</h3>
                     </div>
                 </div>
                 <h2>Choisir et implémenter les architectures adaptées</h2>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     Lors de mon stage au BRGM pour le projet FluoGraphiX, j’ai opté pour l’utilisation de HTML,
                     CSS et JavaScript en utilisant une architecture MVC pour le développement de l’outil,
                     pour adapter ce dernier au cahier des charges conçu.
                 </p>
                 <h2>Faire évoluer une application existante</h2>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     Durant mon alternance actuelle à Synapse Informatique,
                     je suis chargé d’implémenter des nouvelles fonctionnalités pour la qualité des eaux dans l’outil
                     existant Follow.
@@ -70,7 +70,7 @@
                     J'ai également travaillé sur l'optimisation du code en travaillant la qualité algorithmique du code.
                 </p>
                 <h2>Intégrer des solutions dans un environnement de production</h2>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     Pour le projet FluoGraphiX réalisé durant mon stage au BRGM,
                     il a fallu déployer la solution logicielle de l’outil,
                     adapter la solution à l’environement cible,
@@ -83,26 +83,26 @@
             <div class="section3-apprentissage">
                 <h3>En détails</h3>
                 <h2>Composantes essentielles :</h2>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     - Respecter les besoins décrits par les clients
                 </p>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     - Appliquer les principes algorithmiques
                 </p>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     - Veiller à la qualité du code et à sa documentation
                 </p>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     - Choisir les ressources techniques apprpriées
                 </p>
                 <h2>Apprentissages critiques :</h2>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     - Choisir et implémenter les architectures adaptées
                 </p>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     - Faire évoluer une application existante
                 </p>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     - Intégrer des solutions dans un environnement de production
                 </p>
             </div>
@@ -126,12 +126,12 @@
             </div>
             <div>
                 <h2>En ligne</h2>
-                <div style="display: flex; justify-content: space-evenly;">
+                <div class="d-flex justify-content-evenly">
                     <a href="https://www.linkedin.com/in/cyprien-bons/" target="_blank">
-                        <img src="img/linkedin.svg" alt="Linkedin" style="width: 18px;">
+                        <img src="img/linkedin.svg" alt="Linkedin" class="icon-sm">
                     </a>
                     <a href="https://github.com/M2M2005" target="_blank">
-                        <img src="img/github.svg" alt="GitHub" style="width: 18px;">
+                        <img src="img/github.svg" alt="GitHub" class="icon-sm">
                     </a>
                 </div>
             </div>
