--- a/projets.html
+++ b/projets.html
@@ -10,8 +10,8 @@
 </head>
 <header>
     <a href="index.html" class="header">
-        <div style="display: flex; align-items: center">
-            <div class="carre"></div>
+        <div class="d-flex align-items-center">
+            <div class="size-16x16 gradient-bg-right"></div>
             <h1>Cyprien Bons</h1>
         </div>
         <div>/ Étudiant en Informatique</div>
@@ -35,30 +35,30 @@
     </nav>
     <script src="js/script.js"></script>
 </header>
-<body style="margin: 0">
+<body class="m-0">
 <div class="cvprojet">
     <div class="resWidth">
-        <div style="display: flex; align-items: center; justify-content: center">
-            <div class="carre1"></div>
-            <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>Projets</strong></p>
+        <div class="d-flex align-items-center justify-content-center">
+            <div class="size-20x20 gradient-bg-right"></div>
+            <p class="text-page-title"><strong>Projets</strong></p>
         </div>
         <div class="section">
             <div class="sectionprojet1">
-                <div style="display: flex">
-                    <div class="carre3"></div>
-                    <div style="padding: 0 20px">
+                <div class="d-flex">
+                    <div class="size-10x50 gradient-bg-bottom"></div>
+                    <div class="px-20">
                         <h3>LegendsBuster</h3>
-                        <h2 style="font-weight: normal">Code Game Jam 2024</h2>
+                        <h2 class="font-normal">Code Game Jam 2024</h2>
                     </div>
                 </div>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     LegendsBuster est un projet d'équipe réalisé lors de la Code Game 2024.
                     Il s'agit d'un jeu vidéo de type plateformer "die and retry" qui nous a permis de découvrir Unity.
                     Vous pouvez retrouver le projet et y jouer sur Windows et Mac en cliquant sur le bouton ci-dessous.
                 </p>
                 <div class="bonton-container">
-                    <a href="https://drive.google.com/drive/folders/1kk-ehaBQmD1dpbDoX3wrNLLrJnqQw2BI?usp=drive_link" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Drive</p>
+                    <a href="https://drive.google.com/drive/folders/1kk-ehaBQmD1dpbDoX3wrNLLrJnqQw2BI?usp=drive_link" class="button button-secondary button-size-sm" target="_blank">
+                        <p class="m-0">Drive</p>
                     </a>
                 </div>
             </div>
@@ -68,22 +68,22 @@
         </div>
         <div class="section">
             <div class="sectionprojet1">
-                <div style="display: flex;">
-                    <div class="carre3"></div>
-                    <div style="padding: 0 20px">
+                <div class="d-flex">
+                    <div class="size-10x50 gradient-bg-bottom"></div>
+                    <div class="px-20">
                         <h3>Site E-Commerce</h3>
-                        <h2 style="font-weight: normal">Projet Universitaire</h2>
+                        <h2 class="font-normal">Projet Universitaire</h2>
                     </div>
                 </div>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     Création d'un site web e-commerce de vente de parfums réalisé en PHP avec une connexion à une base de données. Gestion des utilisateurs, des produits, des ventes et des paniers.
                 </p>
                 <div class="bonton-container">
-                    <a href="https://github.com/M2M2005/E-Commerce" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Github</p>
+                    <a href="https://github.com/M2M2005/E-Commerce" class="button button-secondary button-size-sm" target="_blank">
+                        <p class="m-0">Github</p>
                     </a>
-                    <a href="https://webinfo.iutmontp.univ-montp2.fr/~bonsc/Projetweb/web/controleurFrontal.php" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Site Web</p>
+                    <a href="https://webinfo.iutmontp.univ-montp2.fr/~bonsc/Projetweb/web/controleurFrontal.php" class="button button-secondary button-size-sm" target="_blank">
+                        <p class="m-0">Site Web</p>
                     </a>
                 </div>
             </div>
@@ -93,21 +93,21 @@
         </div>
         <div class="section">
             <div class="sectionprojet1">
-                <div style="display: flex;">
-                    <div class="carre3"></div>
-                    <div style="padding: 0 20px">
+                <div class="d-flex">
+                    <div class="size-10x50 gradient-bg-bottom"></div>
+                    <div class="px-20">
                         <h3>Site Web Portfolio</h3>
-                        <h2 style="font-weight: normal">Projet Personnel</h2>
+                        <h2 class="font-normal">Projet Personnel</h2>
                     </div>
                 </div>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     J'ai créé un site web portfolio pour mettre en avant mes compétences, mes aptitudes et mes projets.
                     Ce site présente également mon parcours académique, mes expériences professionnelles.
                     Il reflète mon savoir-faire en conception web. Vous y trouverez une section dédiée à mes réalisations.
                 </p>
                 <div class="bonton-container">
-                    <a href="https://github.com/M2M2005/Site-Web" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Github</p>
+                    <a href="https://github.com/M2M2005/Site-Web" class="button button-secondary button-size-sm" target="_blank">
+                        <p class="m-0">Github</p>
                     </a>
                 </div>
             </div>
@@ -117,19 +117,19 @@
         </div>
         <div class="section">
             <div class="sectionprojet1">
-                <div style="display: flex;">
-                    <div class="carre3"></div>
-                    <div style="padding: 0 20px">
+                <div class="d-flex">
+                    <div class="size-10x50 gradient-bg-bottom"></div>
+                    <div class="px-20">
                         <h3>Référendum</h3>
-                        <h2 style="font-weight: normal">Projet Universitaire</h2>
+                        <h2 class="font-normal">Projet Universitaire</h2>
                     </div>
                 </div>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     Le projet consiste à créer un système de référendums sécurisés, permettant à une entreprise de gérer des votes de manière cryptée et confidentielle.
                 </p>
                 <div class="bonton-container">
-                    <a href="https://github.com/M2M2005/Referendum" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Github</p>
+                    <a href="https://github.com/M2M2005/Referendum" class="button button-secondary button-size-sm" target="_blank">
+                        <p class="m-0">Github</p>
                     </a>
                 </div>
             </div>
@@ -139,27 +139,27 @@
         </div>
         <div class="section">
             <div class="sectionprojet1">
-                <div style="display: flex;">
-                    <div class="carre3"></div>
-                    <div style="padding: 0 20px">
+                <div class="d-flex">
+                    <div class="size-10x50 gradient-bg-bottom"></div>
+                    <div class="px-20">
                         <h3>Excel Compétition Escalade</h3>
-                        <h2 style="font-weight: normal">Projet Personnel</h2>
+                        <h2 class="font-normal">Projet Personnel</h2>
                     </div>
                 </div>
-                <p style="padding: 5px 15px">
+                <p class="p-5-15">
                     Ce projet permet de comptabiliser et d'afficher les points des compétiteurs lors d'une compétition d'escalade.
                     Le calcul des résultats est enregistré dans une Google Sheet, et un site web récupère dynamiquement ces résultats via l'API Google Sheets en JavaScript pour les afficher.
                     Une interface a été développée sur Google Sheets, intégrant des boutons permettant d'automatiser certaines tâches, comme l'ajout de participants et de catégories, grâce à Google Apps Script.
                 </p>
                 <div class="bonton-container">
-                    <a href="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Drive</p>
+                    <a href="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing" class="button button-secondary button-size-sm" target="_blank">
+                        <p class="m-0">Drive</p>
                     </a>
-                    <a href="https://github.com/M2M2005/Site-Web" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Github</p>
+                    <a href="https://github.com/M2M2005/Site-Web" class="button button-secondary button-size-sm" target="_blank">
+                        <p class="m-0">Github</p>
                     </a>
-                    <a href="https://cobescalade.cyprienbons.com/" class="bonton2" target="_blank">
-                        <p style="margin: 0;">Site Web</p>
+                    <a href="https://cobescalade.cyprienbons.com/" class="button button-secondary button-size-sm" target="_blank">
+                        <p class="m-0">Site Web</p>
                     </a>
                 </div>
             </div>
@@ -186,12 +186,12 @@
             </div>
             <div>
                 <h2>En ligne</h2>
-                <div style="display: flex; justify-content: space-between; gap: 10px">
+                <div class="d-flex justify-content-between gap-10">
                     <a href="https://www.linkedin.com/in/cyprien-bons/" target="_blank">
-                        <img src="img/linkedin.svg" alt="Linkedin" style="width: 18px;">
+                        <img src="img/linkedin.svg" alt="Linkedin" class="icon-sm">
                     </a>
                     <a href="https://github.com/M2M2005" target="_blank">
-                        <img src="img/github.svg" alt="GitHub" style="width: 18px;">
+                        <img src="img/github.svg" alt="GitHub" class="icon-sm">
                     </a>
                 </div>
             </div>
