--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <header>
     <a href="index.html" class="header">
-        <div style="display: flex; align-items: center">
-            <div class="carre"></div>
+        <div class="d-flex align-items-center">
+            <div class="size-16x16 gradient-bg-right"></div>
             <h1>Cyprien Bons</h1>
         </div>
         <div>/ Étudiant en Informatique</div>
@@ -35,11 +35,11 @@
     </nav>
     <script src="js/script.js"></script>
 </header>
-<body style="margin: 0">
+<body class="m-0">
 <div class="bodyprofil">
     <div class="left">
         <div class="profil">
-            <div style="box-shadow: 10px 10px rgba(0,0,0,0.1); height: 100%">
+            <div class="profile-card-shadow">
                 <div class="profil1" >
                     <img src="img/cyprien.jpg" alt="Photo de profil" class="imgprofil">
                     <p class="titreprofil2"><Strong>Cyprien<br>Bons</Strong></p>
@@ -48,10 +48,10 @@
                 </div>
                 <div class="profilicon">
                     <a href="https://www.linkedin.com/in/cyprien-bons/" target="_blank">
-                        <img src="img/linkedin.svg" alt="Linkedin" style="width: 25px;">
+                        <img src="img/linkedin.svg" alt="Linkedin" class="icon-md">
                     </a>
                     <a href="https://github.com/M2M2005" target="_blank">
-                        <img src="img/github.svg" alt="GitHub" style="width: 25px;">
+                        <img src="img/github.svg" alt="GitHub" class="icon-md">
                     </a>
                 </div>
             </div>
@@ -59,10 +59,10 @@
                 <p class="titreprofil"><strong>Hello</strong></p>
                 <h1>Qui je suis et ce que je fais</h1>
                 <div class="bontonindex">
-                    <a href="cv.html" class="bonton1">
+                    <a href="cv.html" class="button button-primary button-size-sm">
                         <p>CV</p>
                     </a>
-                    <a href="projets.html" class="bonton2">
+                    <a href="projets.html" class="button button-secondary button-size-sm">
                         <p>PROJETS</p>
                     </a>
                 </div>
@@ -90,12 +90,12 @@
             </div>
             <div>
                 <h2>En ligne</h2>
-                <div style="display: flex; justify-content: space-between; gap: 10px">
+                <div class="d-flex justify-content-between gap-10">
                     <a href="https://www.linkedin.com/in/cyprien-bons/" target="_blank">
-                        <img src="img/linkedin.svg" alt="Linkedin" style="width: 18px;">
+                        <img src="img/linkedin.svg" alt="Linkedin" class="icon-sm">
                     </a>
                     <a href="https://github.com/M2M2005" target="_blank">
-                        <img src="img/github.svg" alt="GitHub" style="width: 18px;">
+                        <img src="img/github.svg" alt="GitHub" class="icon-sm">
                     </a>
                 </div>
             </div>
