fix: Affichage dans cv

--- a/cv.html
+++ b/cv.html
@@ -42,7 +42,7 @@
             <div class="size-20x20 gradient-bg-right"></div>
             <p class="text-page-title"><strong>CV</strong></p>
         </div>
-        <div class="d-flex justify-content-end" style="margin: 20px;"> <!-- Titre Formation enlevé d'ici, justify-content-end pour aligner le bouton à droite -->
+        <div class="d-flex justify-content-end" style="margin: 20px;">
             <a href="docs/CV_BONS.pdf" class="button button-primary button-size-md" target="_blank">
                 TÉLÉCHARGER CV
             </a>
@@ -58,11 +58,11 @@
                 <h2 class="font-normal">Orchestra - TravelSoft</h2>
                 <h2 class="font-normal">Paris, France</h2>
                 <h2 class="font-normal">8 semaines</h2>
-                <br>
-                <a href="docs/Rapport_Stage_BONS_Orchestra_TravelSoft.pdf" class="button button-secondary button-size-sm" target="_blank">
-                    <p class="m-0">Rapport</p>
-                </a>
-                <br>
+                <div  class="p-5-15">
+                    <a href="docs/Rapport_Stage_BONS_Orchestra_TravelSoft.pdf" class="button button-secondary button-size-sm" target="_blank">
+                        <p class="m-0">Rapport</p>
+                    </a>
+                </div>
                 <div class="d-flex justify-content-center">
                     <img class="image-projet" src="img/orchestra-plateforme.jpg" alt="Orchestra - TravelSoft">
                 </div>
@@ -135,7 +135,7 @@
         </div>
         <div class="section">
             <div class="sectioncv4">
-                <div> <!-- style="justify-content: left;" n'est pas une propriété CSS valide -->
+                <div>
                     <h1>Langage de programmation</h1>
                 </div>
                 <div class="d-flex justify-content-around">
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                 </div>
-                <div> <!-- style="justify-content: left;" n'est pas une propriété CSS valide -->
+                <div>
                     <h1>Outils</h1>
                 </div>
                 <div class="d-flex justify-content-around">
@@ -207,9 +207,11 @@
                     </div>
                 </div>
                 <p>Vous pouvez consulter mon Portfolio d'apprentissage pour consulter le lien entre les compétences de ma troisième année de BUT et mes projets :</p>
-                <a href="portfolio-apprentissage.html" class="button button-secondary button-size-sm" style="width: 300px; font-size: 14px"> <!-- Garde style pour width/font-size spécifique -->
-                    <p class="m-0">Voir mon Portfolio d’apprentissage</p>
-                </a>
+                <div  class="bonton-container">
+                    <a href="portfolio-apprentissage.html" class="button button-secondary button-size-sm" style="width: 300px; font-size: 14px"> <!-- Garde style pour width/font-size spécifique -->
+                        <p class="m-0">Voir mon Portfolio d’apprentissage</p>
+                    </a>
+                </div>
             </div>
         </div>
         <!-- SECTION LOISIR -->
